# gnn-playground

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: run_all.ps1  run_all.sh
src/gnn_playground/: __init__.py  __main__.py  cli.py  config.py
src/gnn_playground/configs/: community_detection_email.yaml  fraud_elliptic.yaml  graph_classification_mutag.yaml  link_prediction_email.yaml  node_classification_cora.yaml  recsys_movielens.yaml
src/gnn_playground/datasets/: __init__.py  elliptic.py  movielens.py  planetoid.py  snap_email.py  tudatasets.py
src/gnn_playground/models/: __init__.py  decoders.py  gat.py  gcn.py  gcn_graph.py  gin.py  graphsage.py  lightgcn.py  mlp.py
src/gnn_playground/tasks/: __init__.py  community_detection.py  fraud.py  graph_classification.py  link_prediction.py  node_classification.py  recsys.py
src/gnn_playground/training/: __init__.py  loops.py  metrics.py  utils.py
src/gnn_playground/viz/: graph_viz.py  plots.py
tests/: conftest.py  test_cli.py  test_config.py  test_smoke.py
tests/datasets/: test_elliptic.py  test_movielens.py  test_planetoid.py  test_snap_email.py  test_tudatasets.py
tests/models/: test_decoders.py  test_gat.py  test_gcn.py  test_gcn_graph.py  test_gin.py  test_graphsage.py  test_lightgcn.py  test_mlp.py
tests/tasks/: test_community_detection.py  test_fraud.py  test_graph_classification.py  test_link_prediction.py  test_node_classification.py  test_recsys.py
tests/training/: test_loops.py  test_metrics.py  test_utils.py
tests/viz/: test_graph_viz.py  test_plots.py
